# raspa_isotherm_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: match_dma_to_crystal.py  parse_dma_charges.py
src/raspa_isotherm_tools/: __init__.py  __main__.py  analyzer.py  cli.py  constants.py  database.py  force_field.py  generator.py  output_parser.py  parallel_runner.py  plotting.py  simulation.py  space_group_utils.py
src/raspa_isotherm_tools/data/: CO2.json
tests/: __init__.py  test_constants.py  test_force_field.py  test_generator.py  test_parallel_runner.py  test_simulation.py  test_space_group_utils.py
